--- a/Actions/RunPipeline/action.yaml
+++ b/Actions/RunPipeline/action.yaml
@@ -21,15 +21,6 @@ inputs:
     description: ArtifactUrl to use for the build
     required: false
     default: ''
-  appFolders:
-    description: A JSON-formatted array of appFolders
-    required: true
-  testFolders:
-    description: A JSON-formatted array of testFolders
-    required: true
-  bcptTestFolders:
-    description: A JSON-formatted array of bcptTestFolders
-    required: true
   project:
     description: Project folder
     required: false
@@ -56,9 +47,6 @@ runs:
         _token: ${{ inputs.token }}
         _parentTelemetryScopeJson: ${{ inputs.parentTelemetryScopeJson }}
         _artifact: ${{ inputs.artifact }}
-        _appFolders: ${{ inputs.appFolders }}
-        _testFolders: ${{ inputs.testFolders }}
-        _bcptTestFolders: ${{ inputs.bcptTestFolders }}
         _project: ${{ inputs.project }}
         _buildMode: ${{ inputs.buildMode }}
         _installAppsJson: ${{ inputs.installAppsJson }}
@@ -66,7 +54,7 @@ runs:
       run: |
         $errorActionPreference = "Stop"; $ProgressPreference = "SilentlyContinue"; Set-StrictMode -Version 2.0
         try {
-          ${{ github.action_path }}/RunPipeline.ps1 -actor $ENV:_actor -token $ENV:_token -parentTelemetryScopeJson $ENV:_parentTelemetryScopeJson -artifact $ENV:_artifact -appFolders $ENV:_appFolders -testFolders $ENV:_testFolders -bcptTestFolders $ENV:_bcptTestFolders -project $ENV:_project -buildMode $ENV:_buildMode -installAppsJson $ENV:_installAppsJson -installTestAppsJson $ENV:_installTestAppsJson
+          ${{ github.action_path }}/RunPipeline.ps1 -actor $ENV:_actor -token $ENV:_token -parentTelemetryScopeJson $ENV:_parentTelemetryScopeJson -artifact $ENV:_artifact -project $ENV:_project -buildMode $ENV:_buildMode -installAppsJson $ENV:_installAppsJson -installTestAppsJson $ENV:_installTestAppsJson
         }
         catch {
           Write-Host "::ERROR::Unexpected error when running action. Error Message: $($_.Exception.Message.Replace("`r",'').Replace("`n",' ')), StackTrace: $($_.ScriptStackTrace.Replace("`r",'').Replace("`n",' <- '))";
