--- a/Actions/DownloadProjectDependencies/action.yaml
+++ b/Actions/DownloadProjectDependencies/action.yaml
@@ -16,10 +16,10 @@ inputs:
     description: A JSON object that matches eash project with its dependency projects
     required: true
 outputs:
-  DownloadedApps: 
+  DownloadedApps:
     description: A JSON-formatted array of paths to .app files of the apps that were downloaded
     value: ${{ steps.DownloadDependencies.outputs.DownloadedApps }}
-  DownloadedTestApps: 
+  DownloadedTestApps:
     description: A JSON-formatted array of paths to .app files of the test apps that were downloaded
     value: ${{ steps.DownloadDependencies.outputs.DownloadedTestApps }}
 runs:
@@ -40,13 +40,14 @@ runs:
         _baseFolder: ${{ github.workspace }}
         _destinationPath: ${{ github.workspace }}/.dependencies
         _gitHubToken: ${{ github.token }}
-      run:
-        try { 
-          ${{ github.action_path }}/DownloadProjectDependencies.Action.ps1 -project $ENV:_project -buildMode $ENV:_buildMode -projectsDependenciesJson $ENV:_projectsDependenciesJson -baseFolder $ENV:_baseFolder -destinationPath $ENV:_destinationPath -token $ENV:_gitHubToken 
+      run: |
+        $errorActionPreference = "Stop"; $ProgressPreference = "SilentlyContinue"; Set-StrictMode -Version 2.0
+        try {
+          ${{ github.action_path }}/DownloadProjectDependencies.Action.ps1 -project $ENV:_project -buildMode $ENV:_buildMode -projectsDependenciesJson $ENV:_projectsDependenciesJson -baseFolder $ENV:_baseFolder -destinationPath $ENV:_destinationPath -token $ENV:_gitHubToken
         }
-        catch { 
-          Write-Host "::Error::Unexpected error when running action ($($_.Exception.Message.Replace("`r",'').Replace("`n",' ')))"
-          exit 1 
+        catch {
+          Write-Host "::ERROR::Unexpected error when running action. Error Message: $($_.Exception.Message.Replace("`r",'').Replace("`n",' ')), StackTrace: $($_.ScriptStackTrace.Replace("`r",'').Replace("`n",' <- '))"
+          exit 1
         }
 branding:
   icon: terminal
