--- a/Actions/PullPowerPlatformChanges/action.yaml
+++ b/Actions/PullPowerPlatformChanges/action.yaml
@@ -49,8 +49,8 @@ runs:
           authSettings: ${{ inputs.authSettings }}
 
       - name: Who am I (username)
-        if: ${{ env.ppUserName != '' }}
-        uses: microsoft/powerplatform-actions/who-am-i@v1
+        if: ${{ env.userName != '' }}
+        uses: microsoft/powerplatform-actions/who-am-i@v0
         with:
           environment-url: ${{env.ppEnvironmentUrl}}
           user-name: ${{env.ppUserName}}
@@ -75,8 +75,8 @@ runs:
         run: ${{ github.action_path }}\GitCloneReponsitory.ps1 -Actor $ENV:_actor -Token $ENV:_token -ParentTelemetryScopeJson $ENV:_parentTelemetryScopeJson -DirectCommit $ENV:_directCommit
 
       - name: export-solution action (username)
-        if: ${{ env.ppUserName != '' }}
-        uses: microsoft/powerplatform-actions/export-solution@v1
+        if: ${{ env.userName != '' }}
+        uses: microsoft/powerplatform-actions/export-solution@v0
         with:
           user-name: ${{env.ppUserName}}
           password-secret: ${{env.ppPassword}}
