Update env var name and add api version

--- a/Actions/PullRequestStatusCheck/action.yaml
+++ b/Actions/PullRequestStatusCheck/action.yaml
@@ -16,7 +16,7 @@ runs:
     - name: run
       shell: ${{ inputs.shell }}
       env:
-        GH_TOKEN: ${{ inputs.token }}
+        GITHUB_TOKEN: ${{ inputs.token }}
       run: |
         $errorActionPreference = "Stop"; $ProgressPreference = "SilentlyContinue"; Set-StrictMode -Version 2.0
         try {
